idea_plugin/gen/com/shape/idea/parser/ShapeParser.java
// This is a generated file. Not intended for manual editing.
package com.shape.idea.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.shape.idea.psi.ShapeTypes.*;
import static com.shape.idea.parser.ShapeParsingUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ShapeParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ASSIGN_STATEMENT) {
      r = AssignStatement(b, 0);
    }
    else if (t == ATTR_DIMENSION) {
      r = AttrDimension(b, 0);
    }
    else if (t == ATTR_IDENT_VALUE) {
      r = AttrIdentValue(b, 0);
    }
    else if (t == ATTR_KEY) {
      r = AttrKey(b, 0);
    }
    else if (t == ATTR_STR_VALUE) {
      r = AttrStrValue(b, 0);
    }
    else if (t == ATTR_VALUE) {
      r = AttrValue(b, 0);
    }
    else if (t == ATTRIBUTE) {
      r = Attribute(b, 0);
    }
    else if (t == ATTRIBUTE_BLOCK) {
      r = AttributeBlock(b, 0);
    }
    else if (t == ATTRIBUTE_PAIR) {
      r = AttributePair(b, 0);
    }
    else if (t == BREAK_STATEMENT) {
      r = BreakStatement(b, 0);
    }
    else if (t == CLASS_NAME) {
      r = ClassName(b, 0);
    }
    else if (t == COLOR_CODE) {
      r = ColorCode(b, 0);
    }
    else if (t == CONTINUE_STATEMENT) {
      r = ContinueStatement(b, 0);
    }
    else if (t == DIMENSION) {
      r = Dimension(b, 0);
    }
    else if (t == DO_STATEMENT) {
      r = DoStatement(b, 0);
    }
    else if (t == EXPRESSION) {
      r = Expression(b, 0);
    }
    else if (t == FOR_STATEMENT) {
      r = ForStatement(b, 0);
    }
    else if (t == FOUR_DIRECTION_ATTR) {
      r = FourDirectionAttr(b, 0);
    }
    else if (t == ID_DEFINITION) {
      r = IdDefinition(b, 0);
    }
    else if (t == IF_STATEMENT) {
      r = IfStatement(b, 0);
    }
    else if (t == IMPORT_STATEMENT) {
      r = ImportStatement(b, 0);
    }
    else if (t == LOGICAL_EXPR) {
      r = LogicalExpr(b, 0);
    }
    else if (t == NORMAL_EXPR) {
      r = NormalExpr(b, 0);
    }
    else if (t == NUMERIC_EXPR) {
      r = NumericExpr(b, 0);
    }
    else if (t == PACKAGE_NAME) {
      r = PackageName(b, 0);
    }
    else if (t == PARAMETER) {
      r = Parameter(b, 0);
    }
    else if (t == POSTFIX_OPERATOR) {
      r = PostfixOperator(b, 0);
    }
    else if (t == PREFIX_OPERATOR) {
      r = PrefixOperator(b, 0);
    }
    else if (t == RESOURCE_REFERENCE) {
      r = ResourceReference(b, 0);
    }
    else if (t == RETURN_STATEMENT) {
      r = ReturnStatement(b, 0);
    }
    else if (t == ROOT_VIEW) {
      r = RootView(b, 0);
    }
    else if (t == SELECTOR) {
      r = Selector(b, 0);
    }
    else if (t == SINGLE_EXPR) {
      r = SingleExpr(b, 0);
    }
    else if (t == STATE_ATTRIBUTE) {
      r = StateAttribute(b, 0);
    }
    else if (t == STATEMENT) {
      r = Statement(b, 0);
    }
    else if (t == STATEMENT_BLOCK) {
      r = StatementBlock(b, 0);
    }
    else if (t == STYLE_REFERENCE) {
      r = StyleReference(b, 0);
    }
    else if (t == STYLE_STATEMENT) {
      r = StyleStatement(b, 0);
    }
    else if (t == SWITCH_STATEMENT) {
      r = SwitchStatement(b, 0);
    }
    else if (t == TOP_LEVEL_STATEMENTS) {
      r = TopLevelStatements(b, 0);
    }
    else if (t == TRY_STATEMENT) {
      r = TryStatement(b, 0);
    }
    else if (t == TYPE) {
      r = Type(b, 0);
    }
    else if (t == TYPE_CASTING_EXPR) {
      r = TypeCastingExpr(b, 0);
    }
    else if (t == TYPE_SPECIFIER) {
      r = TypeSpecifier(b, 0);
    }
    else if (t == USE_BLOCK) {
      r = UseBlock(b, 0);
    }
    else if (t == USE_STATEMENT) {
      r = UseStatement(b, 0);
    }
    else if (t == VARIABLE_DECLARATION) {
      r = VariableDeclaration(b, 0);
    }
    else if (t == VARIABLE_NAME) {
      r = VariableName(b, 0);
    }
    else if (t == VIEW) {
      r = View(b, 0);
    }
    else if (t == VIEW_ATTRIBUTE_BLOCK) {
      r = ViewAttributeBlock(b, 0);
    }
    else if (t == VIEW_BLOCK) {
      r = ViewBlock(b, 0);
    }
    else if (t == VIEW_NAME) {
      r = ViewName(b, 0);
    }
    else if (t == VIEW_RECOVER) {
      r = ViewRecover(b, 0);
    }
    else if (t == WHILE_STATEMENT) {
      r = WhileStatement(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return File(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ROOT_VIEW, VIEW),
  };

  /* ********************************************************** */
  // VariableName '=' Expression
  public static boolean AssignStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignStatement")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = VariableName(b, l + 1);
    r = r && consumeToken(b, ASSIGN);
    p = r; // pin = 2
    r = r && Expression(b, l + 1);
    exit_section_(b, l, m, ASSIGN_STATEMENT, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // Dimension | ResourceReference | integer | floati
  public static boolean AttrDimension(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttrDimension")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<attr dimension>");
    r = Dimension(b, l + 1);
    if (!r) r = ResourceReference(b, l + 1);
    if (!r) r = consumeToken(b, INTEGER);
    if (!r) r = consumeToken(b, FLOATI);
    exit_section_(b, l, m, ATTR_DIMENSION, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // identifier
  public static boolean AttrIdentValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttrIdentValue")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, ATTR_IDENT_VALUE, r);
    return r;
  }

  /* ********************************************************** */
  // identifier
  public static boolean AttrKey(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttrKey")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, ATTR_KEY, r);
    return r;
  }

  /* ********************************************************** */
  // !('}' | AttrKey)
  static boolean AttrRecover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttrRecover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_, null);
    r = !AttrRecover_0(b, l + 1);
    exit_section_(b, l, m, null, r, false, null);
    return r;
  }

  // '}' | AttrKey
  private static boolean AttrRecover_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttrRecover_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, RBRACE);
    if (!r) r = AttrKey(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // str
  public static boolean AttrStrValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttrStrValue")) return false;
    if (!nextTokenIs(b, STR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, STR);
    exit_section_(b, m, ATTR_STR_VALUE, r);
    return r;
  }

  /* ********************************************************** */
  // FourDirectionAttr
  //     | Dimension
  //     | ResourceReference
  //     | ColorCode
  //     | AttrStrValue
  //     | AttrIdentValue
  //     | integer
  //     | floati
  public static boolean AttrValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttrValue")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<attr value>");
    r = FourDirectionAttr(b, l + 1);
    if (!r) r = Dimension(b, l + 1);
    if (!r) r = ResourceReference(b, l + 1);
    if (!r) r = ColorCode(b, l + 1);
    if (!r) r = AttrStrValue(b, l + 1);
    if (!r) r = AttrIdentValue(b, l + 1);
    if (!r) r = consumeToken(b, INTEGER);
    if (!r) r = consumeToken(b, FLOATI);
    exit_section_(b, l, m, ATTR_VALUE, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // AttributePair | StateAttribute
  public static boolean Attribute(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Attribute")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AttributePair(b, l + 1);
    if (!r) r = StateAttribute(b, l + 1);
    exit_section_(b, m, ATTRIBUTE, r);
    return r;
  }

  /* ********************************************************** */
  // '{' ('}' | Attributes '}')
  public static boolean AttributeBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeBlock")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = consumeToken(b, LBRACE);
    p = r; // pin = 1
    r = r && AttributeBlock_1(b, l + 1);
    exit_section_(b, l, m, ATTRIBUTE_BLOCK, r, p, null);
    return r || p;
  }

  // '}' | Attributes '}'
  private static boolean AttributeBlock_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeBlock_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, RBRACE);
    if (!r) r = AttributeBlock_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // Attributes '}'
  private static boolean AttributeBlock_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeBlock_1_1")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = Attributes(b, l + 1);
    p = r; // pin = 1
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, l, m, null, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // AttrKey ':' AttrValue
  public static boolean AttributePair(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributePair")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = AttrKey(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, consumeToken(b, COLON));
    r = p && AttrValue(b, l + 1) && r;
    exit_section_(b, l, m, ATTRIBUTE_PAIR, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // <<SemicolonListOf Attribute>>
  static boolean Attributes(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Attributes")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, null);
    r = SemicolonListOf(b, l + 1, Attribute_parser_);
    exit_section_(b, l, m, null, r, false, AttrRecover_parser_);
    return r;
  }

  /* ********************************************************** */
  // break
  public static boolean BreakStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BreakStatement")) return false;
    if (!nextTokenIs(b, BREAK)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, BREAK);
    exit_section_(b, m, BREAK_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // PackageName
  public static boolean ClassName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ClassName")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = PackageName(b, l + 1);
    exit_section_(b, m, CLASS_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // view_id_name
  public static boolean ColorCode(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ColorCode")) return false;
    if (!nextTokenIs(b, VIEW_ID_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, VIEW_ID_NAME);
    exit_section_(b, m, COLOR_CODE, r);
    return r;
  }

  /* ********************************************************** */
  // <<param>> { ',' <<param>> }* ','?
  static boolean CommaListOf(PsiBuilder b, int l, final Parser _param) {
    if (!recursion_guard_(b, l, "CommaListOf")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = _param.parse(b, l);
    r = r && CommaListOf_1(b, l + 1, _param);
    r = r && CommaListOf_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // { ',' <<param>> }*
  private static boolean CommaListOf_1(PsiBuilder b, int l, final Parser _param) {
    if (!recursion_guard_(b, l, "CommaListOf_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!CommaListOf_1_0(b, l + 1, _param)) break;
      if (!empty_element_parsed_guard_(b, "CommaListOf_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // ',' <<param>>
  private static boolean CommaListOf_1_0(PsiBuilder b, int l, final Parser _param) {
    if (!recursion_guard_(b, l, "CommaListOf_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && _param.parse(b, l);
    exit_section_(b, m, null, r);
    return r;
  }

  // ','?
  private static boolean CommaListOf_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CommaListOf_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // continue
  public static boolean ContinueStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ContinueStatement")) return false;
    if (!nextTokenIs(b, CONTINUE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, CONTINUE);
    exit_section_(b, m, CONTINUE_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // (integer | floati) (dp | sp | px | '%')
  public static boolean Dimension(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Dimension")) return false;
    if (!nextTokenIs(b, "<dimension>", FLOATI, INTEGER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<dimension>");
    r = Dimension_0(b, l + 1);
    r = r && Dimension_1(b, l + 1);
    exit_section_(b, l, m, DIMENSION, r, false, null);
    return r;
  }

  // integer | floati
  private static boolean Dimension_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Dimension_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, INTEGER);
    if (!r) r = consumeToken(b, FLOATI);
    exit_section_(b, m, null, r);
    return r;
  }

  // dp | sp | px | '%'
  private static boolean Dimension_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Dimension_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DP);
    if (!r) r = consumeToken(b, SP);
    if (!r) r = consumeToken(b, PX);
    if (!r) r = consumeToken(b, MOD);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // do Statement while '(' Expression ')'
  public static boolean DoStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DoStatement")) return false;
    if (!nextTokenIs(b, DO)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DO);
    r = r && Statement(b, l + 1);
    r = r && consumeToken(b, WHILE);
    r = r && consumeToken(b, LPAREN);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, DO_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // NumericExpr
  // //  | ConditionalExpr
  //   | LogicalExpr
  // //  | BitExpr
  //   | TypeCastingExpr
  // //  | CreatingExpr
  // //  | LiteralExpr
  //   | null
  //   | super
  //   | this
  //   | identifier
  //   | new // TODO: 하세여
  //   | SingleExpr (
  //       ('[' Expression ']')
  //     | ('.' Expression)
  //     | (',' Expression)
  //     | (instanceof ClassName)
  //   )
  public static boolean Expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<expression>");
    r = NumericExpr(b, l + 1);
    if (!r) r = LogicalExpr(b, l + 1);
    if (!r) r = TypeCastingExpr(b, l + 1);
    if (!r) r = consumeToken(b, NULL);
    if (!r) r = consumeToken(b, SUPER);
    if (!r) r = consumeToken(b, THIS);
    if (!r) r = consumeToken(b, IDENTIFIER);
    if (!r) r = consumeToken(b, NEW);
    if (!r) r = Expression_8(b, l + 1);
    exit_section_(b, l, m, EXPRESSION, r, false, null);
    return r;
  }

  // SingleExpr (
  //       ('[' Expression ']')
  //     | ('.' Expression)
  //     | (',' Expression)
  //     | (instanceof ClassName)
  //   )
  private static boolean Expression_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expression_8")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = SingleExpr(b, l + 1);
    r = r && Expression_8_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('[' Expression ']')
  //     | ('.' Expression)
  //     | (',' Expression)
  //     | (instanceof ClassName)
  private static boolean Expression_8_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expression_8_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Expression_8_1_0(b, l + 1);
    if (!r) r = Expression_8_1_1(b, l + 1);
    if (!r) r = Expression_8_1_2(b, l + 1);
    if (!r) r = Expression_8_1_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '[' Expression ']'
  private static boolean Expression_8_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expression_8_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACK);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, RBRACK);
    exit_section_(b, m, null, r);
    return r;
  }

  // '.' Expression
  private static boolean Expression_8_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expression_8_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && Expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ',' Expression
  private static boolean Expression_8_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expression_8_1_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // instanceof ClassName
  private static boolean Expression_8_1_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Expression_8_1_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, INSTANCEOF);
    r = r && ClassName(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // TopLevelStatements*
  static boolean File(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "File")) return false;
    int c = current_position_(b);
    while (true) {
      if (!TopLevelStatements(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "File", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // for '(' [VariableDeclaration | Expression] ';'
  //     Expression? ';'
  //     Expression? ')' Statement
  public static boolean ForStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStatement")) return false;
    if (!nextTokenIs(b, FOR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FOR);
    r = r && consumeToken(b, LPAREN);
    r = r && ForStatement_2(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    r = r && ForStatement_4(b, l + 1);
    r = r && consumeToken(b, SEMICOLON);
    r = r && ForStatement_6(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && Statement(b, l + 1);
    exit_section_(b, m, FOR_STATEMENT, r);
    return r;
  }

  // [VariableDeclaration | Expression]
  private static boolean ForStatement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStatement_2")) return false;
    ForStatement_2_0(b, l + 1);
    return true;
  }

  // VariableDeclaration | Expression
  private static boolean ForStatement_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStatement_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = VariableDeclaration(b, l + 1);
    if (!r) r = Expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // Expression?
  private static boolean ForStatement_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStatement_4")) return false;
    Expression(b, l + 1);
    return true;
  }

  // Expression?
  private static boolean ForStatement_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForStatement_6")) return false;
    Expression(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // AttrDimension AttrDimension AttrDimension AttrDimension
  public static boolean FourDirectionAttr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FourDirectionAttr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<four direction attr>");
    r = AttrDimension(b, l + 1);
    r = r && AttrDimension(b, l + 1);
    r = r && AttrDimension(b, l + 1);
    r = r && AttrDimension(b, l + 1);
    exit_section_(b, l, m, FOUR_DIRECTION_ATTR, r, false, null);
    return r;
  }
